# avito

./: CMakeLists.txt  README.txt  helper.py  main.cpp
include/: core_functions.hpp  pipeline.hpp
tests/: functional_tests.cpp  performance_tests.cpp  unit_tests.cpp
text_files/: large_etalon_output.txt  large_input.txt  middle_etalon_output.txt  middle_input.txt  russian_input.txt  small_etalon_output.txt
